--- a/views/base.pug
+++ b/views/base.pug
@@ -10,9 +10,9 @@ html
         div#logo 
             img(src="/static/logo.jpg", alt="Error")
         li #[a(href="/") Home ]
-        li #[a(href="/") About Us ]
-        li #[a(href="/") Services ]
-        li #[a(href="/") Class Info ]
+        li #[a(href="/aboutus") About Us ]
+        li #[a(href="/services") Services ]
+        li #[a(href="/gallery") Gallery ]
         li #[a(href="/contact") Contact Us]
 block content
 block footer
